2005-09-30  Trevor Woerner <twoerner.x@gmail.com>

	reviewer: Jamey Sharp <jamey@minilop.net>

	* Makefile.am, configure.ac, src/Makefile.am, tests/Makefile.am,
	  src/check_all.c, src/check_public.c, src/check_suites.h:
	Created a new directory called "tests" where the unit tests
	will reside, separate from other files. Moved the unit
	test files from the "src" directory into the new "tests"
	directory.

	* configure.ac, tests/CheckLog.xsl, tests/.cvsignore,
	  tests/Makefile.am, tests/check_all.c:
	Added an XSLT transform to post-process the XML log file which
	is generated by the unit test suite into an HTML page. Added
	the necessary hooks into the build system to have this
	translation occur when necessary as part of the build process.

2005-08-15  Trevor Woerner <twoerner.x@gmail.com>

	reviewer: Jamey Sharp <jamey@minilop.net>

	* src/Makefile.am:
	Make builds work when the source and build directories
	are different.

2005-08-03  Trevor Woerner <twoerner.x@gmail.com>

	reviewer: Jamey Sharp <jamey@minilop.net>

	* configure.ac:
	Allow people to not have check as long as they have at
	least automake version 1.9. Older versions of automake
	still work as long as check is installed or the NoCheck
	instructions are followed.

2005-07-21  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_conn.c:
	Fix one uninitialized memory warning from Valgrind.
	More will have to wait.

2005-07-21  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_ext.c:
	Fix memory leak reported by Carl Worth (thanks Carl!).

2005-05-22  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	Permit unions to have fixed-length list fields.

2005-05-21  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	In function parameters and structure fields, line up field names in
	the same starting column.

2005-05-17  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	Make header files self-sufficient, by including xcb.h in the
	generated headers rather than the generated sources.
